Sun Sep 16 13:30:28 2001  Arturo Espinosa Aldama  <arturo@ximian.com>

	* configure.in: set filesdir variable too.

Wed Sep 12 21:42:03 2001  Arturo Espinosa Aldama  <arturo@ximian.com>

	* sysv-conf.in (xml_parse_services): Parse array of available
	services.
	(xml_print): Print services array.
	(get): get available services array.

2001-09-18  Arturo Espinosa Aldama  <arturo@ximian.com>

	* network.pl.in (xst_network_rh62_parse_bootproto): If the
	bootproto is unknown, report error, default to none.
	(xst_network_suse70_parse_bootproto): same.

	* service.pl.in (xst_service_sysv_get_runlevels): added missing
	supported distros and removed bogus ones. Report an error if
	distro is not listed.

2001-09-17    <tambet@ximian.com>

	* x.pl.in (x_update_section): Fixed bug which messed up config file
	when adding new (sub)sections.

2001-09-16  Tambet Ingo  <tambet@ximian.com>

	* x.pl.in (x_update_section): Fixed problem where more than one section
	with same name existed.

Tue Sep 11 20:48:25 2001  Arturo Espinosa Aldama  <arturo@ximian.com>

	* Makefile.am (backends): added sysv-conf backend.

	* report.pl.in (xst_report): Added report for unsupported
	platforms for sysv init scripts.

	* sysv-conf.in: A new backend for SystemV init script control
	and service activation. Only get operation ready.

	* service.pl.in (xst_service_sysv_installed): missing my
	declarations.
	(xst_service_sysv_get_paths): report unsupported distros.
	(xst_service_sysv_list_dir): return a list ref of the services
	in a sysv directory.
	(xst_service_sysv_list_available): list those services in
	the init.d directory.
	(xst_service_sysv_get_level_info): return structure with service
	info on a sysv directory.
	(xst_service_sysv_get_tree): return array of structures for
	all the runlevel directories.

	* *.pl.in: changed SCRIPTSDIR that was broken in principle,
	although in practice didn't matter.

2001-09-13  Arturo Espinosa Aldama  <arturo@ximian.com>
